--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="box">
                 <img src="images/gym1.jpg" alt="Working out at gym">
                 <h3>Latest Blog Post</h3>
-                <p>How swimming changed my life and improved my overall fitness.</p>
+                <p>How gym changed my life and improved my overall fitness.</p>
                 <a href="blog-post1.html" class="button">Read More</a>
             </div>
         </div>
